force-app/main/default/objects/Sales_Credit__c/Sales_Credit__c.object-meta.xml
<CustomObject>
    <label>Sales Credit</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Sales Credit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credits</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>