force-app/main/default/objects/Sales_Credit__c/fields/Activated__c.field-meta.xml
<CustomField>
    <fullName>Activated__c</fullName>
    <formula>NOT(ISBLANK(Opportunity__r.Admin_FMS__c)) &amp;&amp; 
NOT(ISNULL(Opportunity__r.Admin_FMS__c))</formula>
    <label>Activated</label>
    <type>Checkbox</type>
</CustomField>