force-app/main/default/objects/Sales_Credit__c/fields/Activated_Sum__c.field-meta.xml
<CustomField>
    <fullName>Activated_Sum__c</fullName>
    <formula>if( Activated__c, Individual_Revenue_Credit__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activated_Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>