force-app/main/default/objects/Sales_Credit__c/fields/Available_Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Spiff_Amount__c</fullName>
    <description>The amount available as a spiff for this sale. Potential Spiff amount will be calculated by multiplying this amount by the Individual credit for this sale.  Populated manually by Sales Ops.  Spiffs not related to a specific sale will be created as new Sales Credits and placed on the first or last sale of the month and Potential Spiff will be the same as Available Spiff.</description>
    <label>Available Spiff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>