force-app/main/default/objects/Sales_Credit__c/fields/Bonus_Commission_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Amount_Paid__c</fullName>
    <description>Amount paid.  Uploaded by Sales Ops.</description>
    <label>Bonus &amp; Commission Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>