force-app/main/default/objects/Sales_Credit__c/fields/Bonus_Commission_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Date_Paid__c</fullName>
    <description>Manually updated by Sales Ops to indicate when the Bonus &amp; Commission Credit was paid.</description>
    <label>Bonus &amp; Commission Date Paid</label>
    <type>Date</type>
</CustomField>