force-app/main/default/objects/Sales_Credit__c/fields/Bonus_Commission_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Total_Amount_Paid__c</fullName>
    <formula>Bonus_Commission_Amount_Paid__c +  Bonus_Commission_Amount_Paid2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus &amp; Commission Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>