force-app/main/default/objects/Sales_Credit__c/fields/Commission_Disqualify__c.field-meta.xml
<CustomField>
    <fullName>Commission_Disqualify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this Sales Credit will not count toward commission tiers</description>
    <label>Commission Disqualify</label>
    <type>Checkbox</type>
</CustomField>