force-app/main/default/objects/Sales_Credit__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <formula>if( datevalue(Opportunity__r.Contract_Date_Time__c) = Opportunity__r.RecurSoft__Contract_Signed_Date__c, Opportunity__r.Contract_Date_Time__c, DATETIMEVALUE( Opportunity__r.RecurSoft__Contract_Signed_Date__c +(7/24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed Date</label>
    <type>DateTime</type>
</CustomField>