force-app/main/default/objects/Sales_Credit__c/fields/Days_to_Activate__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate__c</fullName>
    <formula>Opportunity__r.Account.MRFMS__c -  Opportunity_Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Activate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>