force-app/main/default/objects/Sales_Credit__c/fields/Include_in_Commission_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Commission_Tiers__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this Sales Credit will not count toward commission tiers</description>
    <label>Include in Commission Tiers</label>
    <type>Checkbox</type>
</CustomField>