force-app/main/default/objects/Sales_Credit__c/fields/Individual_Credit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Credit__c</fullName>
    <label>Individual Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>