force-app/main/default/objects/Sales_Credit__c/fields/Individual_Credit_Portion__c.field-meta.xml
<CustomField>
    <fullName>Individual_Credit_Portion__c</fullName>
    <label>Individual Credit Portion</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>