force-app/main/default/objects/Sales_Credit__c/fields/Individual_HG_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_HG_Revenue__c</fullName>
    <formula>IF( ISBLANK( HG_Revenue_Credit_Override__c ) , 
Opportunity__r.HG_Monthly_Revenue__c * Individual_Credit_Portion__c * 0.3, 
HG_Revenue_Credit_Override__c * Individual_Credit_Portion__c )</formula>
    <label>Individual HG Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>