force-app/main/default/objects/Sales_Credit__c/fields/Individual_LL_Credit__c.field-meta.xml
<CustomField>
    <fullName>Individual_LL_Credit__c</fullName>
    <formula>IF( Individual_LL_Revenue__c &gt; 0 , Individual_Credit_Portion__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual LL Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>