force-app/main/default/objects/Sales_Credit__c/fields/Individual_Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_Other_Revenue__c</fullName>
    <formula>IF( ISBLANK( Other_Revenue_Credit_Override__c ) , 
Opportunity__r.Other_Monthly_Revenue__c * Individual_Credit_Portion__c , 
Other_Revenue_Credit_Override__c * Individual_Credit_Portion__c )</formula>
    <label>Individual Other Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>