force-app/main/default/objects/Sales_Credit__c/fields/Individual_Revenue_Credit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Revenue_Credit__c</fullName>
    <formula>IF( ISBLANK( Total_Revenue_Credit_Override__c ) &amp;&amp; ISBLANK( Individual_Revenue_Credit_Override__c ) , 
 (Opportunity__r.Monthly_Revenue__c - Opportunity__r.HG_Monthly_Revenue__c) * Individual_Credit_Portion__c +  Individual_HG_Revenue__c  , 
IF( NOT( ISBLANK( Individual_Revenue_Credit_Override__c )) , Individual_Revenue_Credit_Override__c * Individual_Credit_Portion__c ,
Total_Revenue_Credit_Override__c * Individual_Credit_Portion__c ))</formula>
    <label>Individual Revenue Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>