force-app/main/default/objects/Sales_Credit__c/fields/Individual_Revenue_Credit_Override__c.field-meta.xml
<CustomField>
    <fullName>Individual_Revenue_Credit_Override__c</fullName>
    <description>At times, sales reps are given extra credit for certain sales.  This should only affect the Individual Revenue Credit however, not the Team Revenue Credit.  This field is the override amount used in the Individual Revenue Credit formula.</description>
    <label>Individual Revenue Credit Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>