force-app/main/default/objects/Sales_Credit__c/fields/Individual_Set_up_Fee_Credit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Set_up_Fee_Credit__c</fullName>
    <formula>Set_Up_Fee__c  *  Individual_Credit_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual Set-up Fee Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>