force-app/main/default/objects/Sales_Credit__c/fields/Individual_SRC_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_SRC_Revenue__c</fullName>
    <formula>IF( ISBLANK( SRC_Revenue_Credit_Override__c ) , 
Opportunity__r.SRC_Monthly_Revenue__c * Individual_Credit_Portion__c , 
SRC_Revenue_Credit_Override__c * Individual_Credit_Portion__c )</formula>
    <label>Individual SRC Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>