force-app/main/default/objects/Sales_Credit__c/fields/Individual_SRSR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Individual_SRSR_Revenue__c</fullName>
    <formula>IF( ISBLANK( SRSR_Revenue_Credit_Override__c ) , 
Opportunity__r.SRSR_Monthly_Revenue__c * Individual_Credit_Portion__c , 
SRSR_Revenue_Credit_Override__c * Individual_Credit_Portion__c )</formula>
    <label>Individual SRSR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>