force-app/main/default/objects/Sales_Credit__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Credits (Manager)</relationshipLabel>
    <relationshipName>Mgr_Sales_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>