force-app/main/default/objects/Sales_Credit__c/fields/Manager_Booster__c.field-meta.xml
<CustomField>
    <fullName>Manager_Booster__c</fullName>
    <formula>IF( ISBLANK( Manager_Override_Credit__c ) , 
(Opportunity__r.Monthly_Revenue__c - Opportunity__r.HG_Monthly_Revenue__c) * Team_Credit_Portion__c + Team_HG_Revenue__c , 
Manager_Override_Credit__c * Team_Credit_Portion__c )</formula>
    <label>Manager Booster</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>