force-app/main/default/objects/Sales_Credit__c/fields/Manager_Override_Credit__c.field-meta.xml
<CustomField>
    <fullName>Manager_Override_Credit__c</fullName>
    <label>Manager Override Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>