force-app/main/default/objects/Sales_Credit__c/fields/Manager_Target__c.field-meta.xml
<CustomField>
    <fullName>Manager_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Target of the Manager</description>
    <label>Manager Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Sales Credits (Manager Target)</relationshipLabel>
    <relationshipName>Sales_Credits1</relationshipName>
    <type>Lookup</type>
</CustomField>