force-app/main/default/objects/Sales_Credit__c/fields/Max_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Trial_End_Date__c</fullName>
    <formula>Opportunity__r.Max_Trial_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Trial End Date</label>
    <type>Date</type>
</CustomField>