force-app/main/default/objects/Sales_Credit__c/fields/MSF__c.field-meta.xml
<CustomField>
    <fullName>MSF__c</fullName>
    <formula>Team_Revenue_Credit__c / Team_Credit_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>