force-app/main/default/objects/Sales_Credit__c/fields/No_Sat_Period__c.field-meta.xml
<CustomField>
    <fullName>No_Sat_Period__c</fullName>
    <formula>Opportunity__r.Max_Trial_End_Date__c &lt;= Opportunity__r.RecurSoft__Contract_Signed_Date__c ||
 ISBLANK( Opportunity__r.Max_Trial_End_Date__c ) ||
 ISNULL ( Opportunity__r.Max_Trial_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Sat Period</label>
    <type>Checkbox</type>
</CustomField>