force-app/main/default/objects/Sales_Credit__c/fields/No_Sat_Upfront__c.field-meta.xml
<CustomField>
    <fullName>No_Sat_Upfront__c</fullName>
    <formula>ROUND( IF(No_Sat_Period__c = True, Potential_Bonus_Commission_Credit__c * Sales_Rep_Target__r.No_Sat_Upfront_Percentage__c,0),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Sat Upfront</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>