force-app/main/default/objects/Sales_Credit__c/fields/OppID__c.field-meta.xml
<CustomField>
    <fullName>OppID__c</fullName>
    <formula>Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppID</label>
    <type>Text</type>
</CustomField>