force-app/main/default/objects/Sales_Credit__c/fields/Opportunity_Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Signed_Date__c</fullName>
    <description>The date the contract was signed for the related opportunity object.</description>
    <formula>Opportunity__r.RecurSoft__Contract_Signed_Date__c</formula>
    <inlineHelpText>The date the contract was signed for the related opportunity object.</inlineHelpText>
    <label>Opportunity Contract Signed Date</label>
    <type>Date</type>
</CustomField>