force-app/main/default/objects/Sales_Credit__c/fields/Opportunity_Contract_Signed_Year__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Signed_Year__c</fullName>
    <formula>TEXT( YEAR( Opportunity_Contract_Signed_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Contract Signed Year</label>
    <type>Text</type>
</CustomField>