force-app/main/default/objects/Sales_Credit__c/fields/Override_B_C_Activation__c.field-meta.xml
<CustomField>
    <fullName>Override_B_C_Activation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Bonus and Commission will be paid regardless of the Account going active.  Checked manually by Sales Ops.</description>
    <label>Override B&amp;C Activation</label>
    <type>Checkbox</type>
</CustomField>