force-app/main/default/objects/Sales_Credit__c/fields/Override_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Override_Spiff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the spiff will be paid regardless of the Account going active. Checked manually by Sales Ops</description>
    <label>Override Spiff</label>
    <type>Checkbox</type>
</CustomField>