force-app/main/default/objects/Sales_Credit__c/fields/Override_Trigger_Logic__c.field-meta.xml
<CustomField>
    <fullName>Override_Trigger_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this will prevent the trigger logic that automatically adds the lookup relationship to the target based on the contract signed date. The total actual credits for each target will still be updated appropriately.</description>
    <inlineHelpText>Check to override the trigger logic. This will allow the Sales Target lookup fields to be changed manually. Unchecking will revert to the trigger logic and automatically assign the Sales Target lookup fields.</inlineHelpText>
    <label>Override Trigger Logic</label>
    <type>Checkbox</type>
</CustomField>