force-app/main/default/objects/Sales_Credit__c/fields/Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Full__c</fullName>
    <formula>ROUND( Actual_Bonus_Commission_Credit__c, 2 ) =  ROUND( Bonus_Commission_Total_Amount_Paid__c , 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid in Full</label>
    <type>Checkbox</type>
</CustomField>