force-app/main/default/objects/Sales_Credit__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula>TEXT(Opportunity__r.Sales_Path__c)</formula>
    <label>Path</label>
    <type>Text</type>
</CustomField>