force-app/main/default/objects/Sales_Credit__c/fields/Potential_Bonus_Commission_Credit__c.field-meta.xml
<CustomField>
    <fullName>Potential_Bonus_Commission_Credit__c</fullName>
    <description>Calculates the Bonus &amp; Commission value for the Sales Credit.  Hidden on the Sales Credit object and displayed on the Bonus &amp; Commission Credit object.</description>
    <formula>IF( ISPICKVAL( Sales_Rep_Target__r.Team__c , &quot;Inside Sales&quot; ) ,
  ( Individual_Revenue_Credit__c / Sales_Rep_Target__r.Total_Revenue_Credit__c ) * Sales_Rep_Target__r.Available_Bonus__c *
    Sales_Rep_Target__r.Bonus_Commission_Multiplier__c ,

/*HG doesn&#39;t get the multiplier for TSRs*/  
(( Individual_Revenue_Credit__c - Individual_HG_Revenue__c ) * Sales_Rep_Target__r.Multiplier__c ) + Individual_HG_Revenue__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Bonus &amp; Commission Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>