force-app/main/default/objects/Sales_Credit__c/fields/Potential_Spiff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Potential_Spiff_Amount__c</fullName>
    <description>The potential amount earned as a spiff for this sale. Actual Spiff amount will be based on activation for this sale.  Spiffs not related to a specific sale will be created as new Sales Credits and placed on the first or last sale of the month and Potential Spiff will be the same as Available Spiff and Actual Spiff.</description>
    <formula>IF( Individual_Credit_Portion__c = 0 , Available_Spiff_Amount__c , Available_Spiff_Amount__c * Individual_Credit_Portion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Spiff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>