force-app/main/default/objects/Sales_Credit__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>Opportunity__r.Price_Book_Name__c</formula>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>