force-app/main/default/objects/Sales_Credit__c/fields/Remaining_Commission__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Commission__c</fullName>
    <formula>ROUND( Potential_Bonus_Commission_Credit__c * (1 - Sales_Rep_Target__r.No_Sat_Upfront_Percentage__c), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>