force-app/main/default/objects/Sales_Credit__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Rep Sales Credits</relationshipLabel>
    <relationshipName>Rep_Sales_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>