force-app/main/default/objects/Sales_Credit__c/fields/Sales_Rep_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Sales Credits (Sales Rep Target)</relationshipLabel>
    <relationshipName>Sales_Credits3</relationshipName>
    <type>Lookup</type>
</CustomField>