force-app/main/default/objects/Sales_Credit__c/fields/Satellite_Office_Rep_Credit__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Office_Rep_Credit__c</fullName>
    <formula>if(or(Opportunity__r.Campaign.Name = &quot;Pricing/SR - 1-2 Day Satellite&quot;, Opportunity__r.Campaign.Name = &quot;Pricing/SR - 3 Day Satellite&quot;),1,0)* Individual_Credit_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Satellite Office Rep Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>