force-app/main/default/objects/Sales_Credit__c/fields/Set_Up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Fee__c</fullName>
    <formula>Opportunity__r.SFPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set Up Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>