force-app/main/default/objects/Sales_Credit__c/fields/Spiff_Amount_Paid2__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Amount_Paid2__c</fullName>
    <description>Occasionaly, there are adjustments made after the first amount has been paid. This field will allow for tracking a second payment. Uploaded by Sales Ops.</description>
    <label>Spiff Amount Paid2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>