force-app/main/default/objects/Sales_Credit__c/fields/Spiff_Date_Paid2__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Date_Paid2__c</fullName>
    <description>Occasionaly, there are adjustments made after the first amount has been paid. This field will allow for tracking a second payment date. Uploaded by Sales Ops.</description>
    <label>Spiff Date Paid2</label>
    <type>Date</type>
</CustomField>