force-app/main/default/objects/Sales_Credit__c/fields/Spiff_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Date_Paid__c</fullName>
    <description>Manually updated by Sales Ops to indicate when the Spiff Amount was paid.</description>
    <label>Spiff Date Paid</label>
    <type>Date</type>
</CustomField>