force-app/main/default/objects/Sales_Credit__c/fields/Spiff_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Paid_in_Full__c</fullName>
    <formula>round(Actual_Spiff_Amount__c, 2 ) = Spiff_Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spiff Paid in Full</label>
    <type>Checkbox</type>
</CustomField>