force-app/main/default/objects/Sales_Credit__c/fields/Spiff_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Total_Amount_Paid__c</fullName>
    <formula>Spiff_Amount_Paid__c + Spiff_Amount_Paid2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spiff Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>