force-app/main/default/objects/Sales_Credit__c/fields/SR_Revenue_Credit_Override__c.field-meta.xml
<CustomField>
    <fullName>SR_Revenue_Credit_Override__c</fullName>
    <label>SR Revenue Credit Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>