force-app/main/default/objects/Sales_Credit__c/fields/SRC_Revenue_Credit_Override__c.field-meta.xml
<CustomField>
    <fullName>SRC_Revenue_Credit_Override__c</fullName>
    <description>Manual override of the Opportunity revenue nubmers</description>
    <label>SRC Revenue Credit Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>