force-app/main/default/objects/Sales_Credit__c/fields/SRSR_Revenue_Credit_Override__c.field-meta.xml
<CustomField>
    <fullName>SRSR_Revenue_Credit_Override__c</fullName>
    <description>Manual override of the Opportunity revenue numbers</description>
    <label>SRSR Revenue Credit Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>