force-app/main/default/objects/Sales_Credit__c/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <formula>Opportunity__r.Sub_Vertical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Vertical</label>
    <type>Text</type>
</CustomField>