force-app/main/default/objects/Sales_Credit__c/fields/Subscriber_ID_Search__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_ID_Search__c</fullName>
    <label>Subscriber ID Search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>