force-app/main/default/objects/Sales_Credit__c/fields/Team_Credit__c.field-meta.xml
<CustomField>
    <fullName>Team_Credit__c</fullName>
    <label>Team Credit</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>