force-app/main/default/objects/Sales_Credit__c/fields/Team_HG_Credit__c.field-meta.xml
<CustomField>
    <fullName>Team_HG_Credit__c</fullName>
    <formula>IF( Team_HG_Revenue__c &gt; 0 ,  Team_Credit_Portion__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team HG Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>